crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__resource_with_static_method.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { resource r { method: static func(arg1: string, arg2: bool) -> u32; } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (resource_item name: (identifier) methods: (resource_method (static_method name: (identifier) ty: (func_type params: (param_list params: (named_type name: (identifier) ty: (ty (builtins))) params: (named_type name: (identifier) ty: (ty (builtins)))) result: (result_list (ty (builtins))))))))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Resource(
                        Resource {
                            name: Ident(
                                Id {
                                    value: 3,
                                },
                            ),
                            index: ResourceIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            constructor: None,
                            methods: [],
                            static_methods: [
                                StaticResourceMethod(
                                    FuncItem {
                                        name: Ident(
                                            Id {
                                                value: 2,
                                            },
                                        ),
                                        index: StaticMethod(
                                            StaticMethodIndex {
                                                file: FilePath(
                                                    Id {
                                                        value: 1,
                                                    },
                                                ),
                                                index: RawIndex(
                                                    1,
                                                ),
                                            },
                                        ),
                                        docs: None,
                                        params: [
                                            Parameter {
                                                name: Ident(
                                                    Id {
                                                        value: 4,
                                                    },
                                                ),
                                                docs: None,
                                                ty: Builtin(
                                                    String,
                                                ),
                                            },
                                            Parameter {
                                                name: Ident(
                                                    Id {
                                                        value: 5,
                                                    },
                                                ),
                                                docs: None,
                                                ty: Builtin(
                                                    Boolean,
                                                ),
                                            },
                                        ],
                                        return_value: Some(
                                            Single(
                                                Builtin(
                                                    U32,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ),
            ],
        },
    },
}
