crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__varant_with_multiple_fields_and_payloads.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i {\n            /// A variant.\n            variant v {\n                /// An integer.\n                first(u32),\n                /// A string.\n                second(string),\n                /// An empty variant.\n                third,\n            }\n        }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (variant_item attributes: (attribute (doc_comment (docs))) name: (identifier) cases: (variant_case attributes: (attribute (doc_comment (docs))) name: (identifier) ty: (ty (builtins))) cases: (variant_case attributes: (attribute (doc_comment (docs))) name: (identifier) ty: (ty (builtins))) cases: (variant_case attributes: (attribute (doc_comment (docs))) name: (identifier))))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Variant(
                        Variant {
                            name: Ident(
                                Id {
                                    value: 5,
                                },
                            ),
                            index: VariantIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: Some(
                                "A variant.",
                            ),
                            cases: [
                                VariantCase {
                                    name: Ident(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    docs: Some(
                                        "An integer.",
                                    ),
                                    ty: Some(
                                        Builtin(
                                            U32,
                                        ),
                                    ),
                                },
                                VariantCase {
                                    name: Ident(
                                        Id {
                                            value: 3,
                                        },
                                    ),
                                    docs: Some(
                                        "A string.",
                                    ),
                                    ty: Some(
                                        Builtin(
                                            String,
                                        ),
                                    ),
                                },
                                VariantCase {
                                    name: Ident(
                                        Id {
                                            value: 4,
                                        },
                                    ),
                                    docs: Some(
                                        "An empty variant.",
                                    ),
                                    ty: None,
                                },
                            ],
                        },
                    ),
                ),
            ],
        },
    },
}
